# demand-forecasting-inventory-optimization-system

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: interview-guide.md
sql/: demand_seasonality.sql  inventory_risk.sql  model_evaluation_summary.sql  sales_trends.sql
src/retail_forecasting/: __init__.py  cli.py  config.py  db.py
src/retail_forecasting/api/: main.py  schemas.py  service.py
src/retail_forecasting/dashboard/: app.py
src/retail_forecasting/forecasting/: __init__.py  metrics.py  models.py  train.py
src/retail_forecasting/pipeline/: __init__.py  features.py  ingest.py  inventory.py
tests/: conftest.py  test_api.py  test_features.py  test_inventory.py  test_metrics.py  test_pipeline_smoke.py
