[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-demand-forecasting-system"
version = "0.1.0"
description = "Demand forecasting and inventory optimization system for retail analytics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "fastapi>=0.115.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "scikit-learn>=1.5.0",
  "statsmodels>=0.14.0",
  "streamlit>=1.38.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[project.scripts]
retail-forecast = "retail_forecasting.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
